# eiva-common

./: LICENSE  README.md
lib/react/common/eiva-common/: package.json
lib/react/common/eiva-common/src/: eiva_api.js  index.js
lib/react/common/eiva-fe-security/: package.json
lib/react/common/eiva-fe-security/src/: index.ts
lib/react/common/eiva-fe-security/src/components/: LoginPage.tsx
lib/react/common/eiva-fe-security/src/services/: authService.ts
lib/react/common/eiva-fe-security/src/store/: useAuthStore.ts
lib/react/common/eiva-fe-sso/: package.json
lib/react/common/eiva-fe-sso/src/: index.ts  keycloak.ts  saml.ts  types.ts
lib/react/constants/: index.ts
lib/react/types/: index.ts
lib/react/utils/: index.ts
lib/react/workflow/eiva-fe-workflow/: package.json
lib/react/workflow/eiva-fe-workflow/src/: WorkflowEditor.jsx  index.js  workflow-style.css
lib/rust/: Cargo.toml
lib/rust/crates/ai/eiva-be-codex/: Cargo.toml
lib/rust/crates/ai/eiva-be-codex/src/: lib.rs
lib/rust/crates/ai/eiva-be-openclaw/: Cargo.toml
lib/rust/crates/ai/eiva-be-openclaw/src/: lib.rs
lib/rust/crates/ai/eiva-claw-core/: Cargo.toml
lib/rust/crates/ai/eiva-claw-core/src/: args.rs  auto_fetch.rs  client_prefs.rs  config.rs  cron.rs  daemon.rs  error.rs  error_details.rs  exec_status.rs  host.rs  lib.rs  logging.rs  memory.rs  memory_vault.rs  process_manager.rs  runtime_ctx.rs  sessions.rs  soul.rs  steel_memory.rs  steel_memory_indexer.rs  subconscious.rs  theme.rs  tool_pipeline.rs  types.rs  ui.rs  workspace_context.rs
lib/rust/crates/ai/eiva-claw-core/src/canvas/: host.rs
lib/rust/crates/ai/eiva-claw-core/src/commands/: mod.rs
lib/rust/crates/ai/eiva-claw-core/src/engines/: exo.rs  joshua.rs  llamacpp.rs  mod.rs  ollama.rs
lib/rust/crates/ai/eiva-claw-core/src/gateway/: client.rs  client_types.rs  mod.rs  ssh_connection.rs  types.rs
lib/rust/crates/ai/eiva-claw-core/src/mcp/: client.rs  mod.rs  tools.rs
lib/rust/crates/ai/eiva-claw-core/src/models/: registry.rs
lib/rust/crates/ai/eiva-claw-core/src/observability/: mod.rs  stats.rs
lib/rust/crates/ai/eiva-claw-core/src/pairing/: authorized.rs  client_keys.rs  mod.rs
lib/rust/crates/ai/eiva-claw-core/src/protocols/: receipt.rs
lib/rust/crates/ai/eiva-claw-core/src/providers/: custom.rs  device_flow.rs  genai_backend.rs  mod.rs  models.rs  native_llama.rs  tests.rs
lib/rust/crates/ai/eiva-claw-core/src/runtime/: docker.rs  mod.rs  native.rs  ssh.rs  traits.rs
lib/rust/crates/ai/eiva-claw-core/src/sandbox/: mod.rs  platform.rs  tests.rs
lib/rust/crates/ai/eiva-claw-core/src/secrets/: tests.rs  vault.rs  vault_ext.rs
lib/rust/crates/ai/eiva-claw-core/src/security/: mod.rs  safety_layer.rs
lib/rust/crates/ai/eiva-claw-core/src/services/: manager.rs  mod.rs
lib/rust/crates/ai/eiva-claw-core/src/skills/: clawhub.rs  error.rs  mod.rs  tests.rs
lib/rust/crates/ai/eiva-claw-core/src/swarm/: templates.rs
lib/rust/crates/ai/eiva-claw-core/src/tasks/: manager.rs  mod.rs
lib/rust/crates/ai/eiva-claw-memory-tree/: Cargo.toml
lib/rust/crates/ai/eiva-claw-memory-tree/src/: indexer.rs  lib.rs  store.rs  summarizer.rs
lib/rust/crates/ai/eiva-claw-tokenjuice/: Cargo.toml
lib/rust/crates/common/eiva-be-security/: Cargo.toml
lib/rust/crates/common/eiva-be-security/src/: errors.rs  jwt.rs  lib.rs  middleware.rs  models.rs  password.rs  repository.rs
lib/rust/crates/common/eiva-be-sso/: Cargo.toml
lib/rust/crates/common/eiva-be-sso/src/: keycloak.rs  lib.rs  oidc.rs  saml.rs  types.rs
lib/rust/crates/common/eiva-common/: Cargo.toml  build.rs
lib/rust/crates/common/eiva-common/proto/: eiva_api.proto
lib/rust/crates/common/eiva-common/src/: lib.rs
lib/rust/crates/eiva-be-workflow/: Cargo.toml
lib/rust/crates/eiva-be-workflow/src/: lib.rs
lib/rust/crates/workflow/eiva-be-workflow/: Cargo.toml
lib/rust/crates/workflow/eiva-be-workflow/src/: context.rs  models.rs  nodes.rs  runner.rs
lib/rust/src/: lib.rs
lib/rust/src/constants/: mod.rs
lib/rust/src/errors/: mod.rs
lib/rust/src/types/: mod.rs
lib/rust/src/utils/: mod.rs
(+60 files in other folders)
