[package]
name = "eiva-be-security"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.74", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "any"] }
thiserror = "1"
