[package]
name = "eiva-be-sso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
base64 = "0.22"
ring = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
